pages changed